# s-plode

./: .gitignore  Dockerfile  README.md  cg_generate.py  entry.sh  generate.py  macros_behemot.h  make_behemot.sh  makefile  pyproject.toml  s-plode.sh  schema.yaml  splode.sh  template.c.jinja2  ubsan_stubs.c
Samples/EDK2_Arithmetic/: FirmwarePerformancePei.c  FirmwarePerformancePei_FpdtStatusCodeListenerPei_splode.c  FirmwarePerformancePei_fixed_FpdtStatusCodeListenerPei_splode.c  FirmwarePerformancePei_splode.c  FpdtStatusCodeListenerPei.yml  FpdtStatusCodeListenerPei_mocks.c  edk2_behemot.h
Samples/Hello/: hello.c  hello.yml  hello_ansatz_splode.c
Samples/Integers/: flow_switch.c  mocks.c  mocks.h  overflow_1.c  overflow_2.c  overflow_3.c  overflow_for.c  overflow_if.c  underflow_1.c  underflow_2.c  underflow_ternary.c  underflow_while.c  while_sample.c
Samples/Memory/: buffer_overflow.c
demo/: config.yml  example.c
s-call-graph/: adoption-criteria.md  rustworkX.py  test_networkX.py  test_rustworkX.py
s-call-graph/evaluation/: every_node.c  example.c  examplePP.c  example_pp.c  func_call.c  test_networkX.py  test_rustworkX.py
s_call_graph/: __init__.py  adoption-criteria.md  ast_visitor.py  cli.py  custom_types.py  drawer.py  g_filter.py  genericGraph.py  hoas_builder.py  main.py  neo4j.py  networkX.py  params_n_globals.py  parse_dec_n_init.py  parse_decl_n_init.py  parse_func_calls.py  pygraph.py  rustworkX.py  s_graph_builder.py  subtree_n_globals.py  test_networkX.py  test_rustworkX.py  test_tools.py
s_call_graph/evaluation/: assignation.c  hello.c  (+8 more)
(+46 files in other folders)
